--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "moment": "^2.30.1",
+    "mongoose": "^8.10.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
