--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
+    "jwt-simple": "^0.5.6",
     "moment": "^2.30.1",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
